--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<title>product_want_to_buy</title>
@@ -9,15 +10,15 @@
 		<link rel="stylesheet" href="../../../css/mui.min.css">
 		<link rel="stylesheet" href="../../../css/kankan_home.css">
 	</head>
+
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<h1 class="mui-center mui-title lang" data-locale="commodity_want"></h1>
 		</header>
-		
-			<div class="mui-content kankan_jyimgbox">
-				<form action="" method="post" name="publishcomodity" id="publishcomodity">
-				 <h5 class="ka_proloh5 ka_propicfonts lang" data-locale="commodity_photos"></h5>
+		<div class="mui-content kankan_jyimgbox">
+			<form action="" method="post" name="publishcomodity" id="publishcomodity">
+				<h5 class="ka_proloh5 ka_propicfonts lang" data-locale="commodity_photos"></h5>
 				<div class="ka_prologbox0 z_photo">
 					<div class="z_file" style="background-image: url(../../../images/iconfont-tianjia.png);" id="gallery"></div>
 					<div class="mui-pull-right mui-icon mui-icon-camera takepic" id="takepic"></div>
@@ -65,13 +66,13 @@
 	<script src="../../../js/language.js"></script>
 	<script src="../../../js/sha256.js"></script>
 	<script src="../../../js/common.js"></script>
+	<script src="../../../js/pro_uploadimg.js"></script>
 	<script>
 $(function() {
 	$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
 });
 //submit form
 function publishs() {
-	//return confirm(TextMessage.publishsure);
 	var buy_sell_flag = "1";
 	var comm_name = $("#comm_name").val();
 	var comm_detail = $("#comm_detail").val();
@@ -79,14 +80,34 @@ function publishs() {
 	var imges1 = $("#1").val();
 	var imges2 = $("#2").val();
 	var imges3 = $("#3").val();
-	if(comm_name == "") {
-		alert(TextMessage.pro_nametest);
+	if(comm_name.trim() == "") {
+		mui.toast(TextMessage.pro_nametest, {
+			duration: 'long',
+			type: 'div'
+		});
 		document.publishcomodity.comm_name.focus();
 		return false;
 	}
-	if(comm_detail == "") {
-		alert(TextMessage.pro_descriptiontest);
+	if(comm_name.trim().length>40){
+		mui.toast(TextMessage.TextMessage.pro_namelength, {
+			duration: 'long',
+			type: 'div'
+		});
+		return false;
+	}
+	if(comm_detail.trim() == "") {
+		mui.toast(TextMessage.pro_descriptiontest, {
+			duration: 'long',
+			type: 'div'
+		});
 		document.publishcomodity.comm_detail.focus();
+		return false;
+	}
+	if(comm_detail.trim().length >1000) {
+		mui.toast(TextMessage.TextMessage.pro_detaillength, {
+			duration: 'long',
+			type: 'div'
+		});
 		return false;
 	}
 	var params = {
@@ -102,305 +123,23 @@ function publishs() {
 	Repository.Commodity.Commoditypublish(params, {
 		ok: function(data) {
 			Log.d("success");
-			alert(TextMessage.pro_logininfo);
-			location.reload();
-		},
-		ng: function(data) {
-			Log.d(data);
-			if(data == "1000" || data=="2002") {
-				mui.toast(TextMessage.test, {
-					duration: 'long',
-					type: 'div'
-				});
-				mui.openWindow({
-					id: 'login',
-					url:"../../login/login.html"
-				});
-			} 
-//			if(data=="2002"){
-//				mui.toast(TextMessage.userng, {
-//					duration: 'long',
-//					type: 'div'
-//				});
-//				mui.openWindow({
-//					id: 'login',
-//					url:"../../login/login.html"
-//				});
-//			}
-			if(data=="2007"){
-				mui.toast(TextMessage.ticketng, {
-					duration: 'long',
-					type: 'div'
-				});
-				location.reload();
-				mui.openWindow({
-					id: 'point_to_ticket',
-					url:"../sttting/point_to_ticket.html"
-				});
-			}
-			//alert("other error code:" + data);
-			
-		}
-	});
-
-}
-///////////////take picture/////////////////
-mui(".ka_prologbox0").on("tap", "#takepic", function(e) {
-	if(mui.os.plus) {
-		var a = [{
-			title: TextMessage.tackpicture
-		}];
-		plus.nativeUI.actionSheet({
-			title: TextMessage.comdity_takepic,
-			cancel: TextMessage.cancel,
-			buttons: a
-		}, function(b) {
-			switch(b.index) {
-				case 0:
-					break;
-				case 1:
-					getImage();
-					break;
-				default:
-					break
-			}
-		})
-	}
-
-});
-//gallery
-mui(".ka_prologbox0").on("tap", "#gallery", function(e) {
-	if(mui.os.plus) {
-		var a = [{
-			title: TextMessage.gallerychoose
-		}];
-		plus.nativeUI.actionSheet({
-			title: TextMessage.chooseimage,
-			cancel: TextMessage.cancel,
-			buttons: a
-		}, function(b) {
-			switch(b.index) {
-				case 0:
-					break;
-				case 1:
-					galleryImg();
-					break;
-				default:
-					break
-			}
-		})
-	}
-
-});
-
-function imglength() {
-	var imglength = $(".z_images").length;
-	if(imglength > 3) {
-		$(".z_file").hide();
-		$("#takepic").hide();
-	}
-}
-//px Convert to rem
-(function(doc, win) {
-	var docEl = doc.documentElement,
-		resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-		recalc = function() {
-			var clientWidth = docEl.clientWidth;
-			if(!clientWidth) return;
-			if(clientWidth >= 640) {
-				docEl.style.fontSize = '100px';
-			} else {
-				docEl.style.fontSize = 100 * (clientWidth / 640) + 'px';
-			}
-		};
-
-	if(!doc.addEventListener) return;
-	win.addEventListener(resizeEvt, recalc, false);
-	doc.addEventListener('DOMContentLoaded', recalc, false);
-})(document, window);
-//delete image
-function imgRemove() {
-	var imgList = document.getElementsByClassName("z_addImg");
-	var mask = document.getElementsByClassName("z_mask")[0];
-	var cancel = document.getElementsByClassName("z_cancel")[0];
-	var sure = document.getElementsByClassName("z_sure")[0];
-	for(var j = 0; j < imgList.length; j++) {
-		imgList[j].index = j;
-		imgList[j].onclick = function() {
-			var t = this;
-			mask.style.display = "block";
-			cancel.onclick = function() {
-				mask.style.display = "none";
-			};
-			sure.onclick = function() {
-				mask.style.display = "none";
-				t.style.display = "none";
-				var picdisp = $(".z_file").css("display");
-				if(picdisp == "none") {
-					$(".z_file").show();
-				}
-				var takpic = $("#takepic").css("display");
-				if(takpic == "none") {
-					$("#takepic").show();
-				}
-				var dethtml = $(t).html();
-				$("#deltimg").html(dethtml);
-				var altval = $("#deltimg img").attr("alt");
-				$("#" + altval).val("0");
-				nums = altval;
-				$(t).remove();
-				$("#deltimg").empty();
-			};
-
-		}
-	};
-
-};
-
-//compressImage
-function compressImg(path) {
-	var currenttime = Date.parse(new Date());
-	plus.zip.compressImage({
-			src: path,
-			dst: "_doc/" + currenttime + ".jpg",
-			quality: 20,
-			overwrite: true,
-			format: "jpg",
-			width: "auto",
-			height: "auto"
-		},
-		function(event) {
-			console.log("Compress success!");
-			var target = event.target;
-			var size = event.size; // （Byte）
-			var width = event.width; // px
-			var height = event.height; // px
-			uploadimage(target);
-		},
-		function(error) {
-			alert("Compress error!" + error.message);
-		});
-}
-
-function uploadimage(path) {
-	var targetimg = path;
-	var server = Api.url.Commodity.imgupload;
-	//open loading button
-	var wt = plus.nativeUI.showWaiting();
-	var task = plus.uploader.createUpload(server, {
-		method: "post"
-	}, function(t, status) {
-		if(status == 200) {
-			//console.log("upload success:" + t.responseText);
-			console.log("upload success!");
-			Processing(t.responseText);
-			wt.close();
-		} else {
-			console.log("upload error：" + status);
-			wt.close();
-		}
-	});
-	//add parameter
-	task.addData("tokencheck", Api.getToken()); //Api.getToken()
-	task.addData("signcheck", Api.createSignInfo());
-	task.addData("serial", nums.toString());
-	task.addFile(targetimg, { key: "image" });
-	task.start();
-}
-
-function Processing(results) {
-	var data = JSON.parse(results);
-	var stautes = data.result.status;
-	if(stautes == "OK") {
-		var imagesrc = data.result.data[1];
-		var value = $("#" + nums).val();
-		if(value == "0") {
-			$("#" + nums).val(imagesrc);
-		}
-		//console.log("sss");
-		$(".z_images").show();
-	} else {
-		var errorcode = data.result.statuscode;
-		console.log("NG:" + errorcode);
-		if(errorcode == "1000" || errorcode=="2002") {
-			mui.toast(TextMessage.test, {
+			mui.toast(TextMessage.pro_logininfo, {
 				duration: 'long',
 				type: 'div'
 			});
-			mui.openWindow({
-				id: 'login',
-				url:"../../login/login.html"
+			location.reload();
+			mui.plusReady(function() {
+				var mainpage=plus.webview.getLaunchWebview();
+				 mui.fire(mainpage,'gohome');
 			});
+		},
+		ng: function(data) {
+			Log.d(data);
+			Api.callback_ng(data);
 		}
-//		if(errorcode=="2002"){
-//			mui.toast(TextMessage.userng, {
-//				duration: 'long',
-//				type: 'div'
-//			});
-//			mui.openWindow({
-//				id: 'login',
-//				url:"../../login/login.html"
-//			});
-//		}
-	}
+	});
+
 }
-var nums = 0;
-
-function imgappend(localurl) {
-	var flag = true;
-	for(var m = 0; m < 4; m++) {
-		var valuem = $("#" + m).val();
-		if(valuem == "0") {
-			nums = m;
-			break;
-		}
-	}
-	var img = document.createElement("img");
-	img.setAttribute("src", localurl);
-	img.setAttribute("alt", nums);
-	img.setAttribute("class", "z_images");
-	img.setAttribute("style", "display: none");
-	var imgAdd = document.createElement("div");
-	imgAdd.setAttribute("class", "z_addImg");
-	imgAdd.appendChild(img);
-	$(".z_photo").append(imgAdd);
-}
-
-function getImage() {
-	var c = plus.camera.getCamera();
-	c.captureImage(function(e) {
-		plus.io.resolveLocalFileSystemURL(e, function(entry) {
-			var localurl = entry.toLocalURL();
-			imgappend(localurl);
-			imglength();
-			imgRemove();
-			compressImg(localurl);
-		}, function(e) {
-			console.log("Read the picture file error：" + e.message);
-		});
-	}, function(s) {
-		console.log("error" + s);
-	}, {
-		filename: "_doc/camera/"
-	})
-}
-
-function galleryImg() {
-	plus.gallery.pick(function(a) {
-		plus.io.resolveLocalFileSystemURL(a, function(entry) {
-			var localURL2 = entry.toLocalURL();
-			imgappend(localURL2);
-			imglength();
-			imgRemove();
-			compressImg(localURL2);
-
-		}, function(e) {
-			console.log("Read photo file error：" + e.message);
-		});
-	}, function(a) {}, {
-		filter: "image"
-	})
-};
 </script>
 
 </html>
