--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/login.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/login.html
@@ -32,7 +32,8 @@
 				text-align: center;
 			}
 			
-			#forget_password {
+			#forget_password,
+			#new_user_login {
 				color: #FF0000;
 			}
 			
@@ -65,10 +66,9 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<!--
-			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<a class="lang" data-locale="back"></a>
-			-->
+			<a class="mui-action-back mui-icon mui-icon-left-nav">
+				<font class="lang" data-locale="back" size="3"></font>
+			</a>
 			<h1 class="mui-title"><span class="lang" data-locale="login"></span></h1>
 		</header>
 		<div class="mui-content">
@@ -98,6 +98,7 @@
 					</form>
 				</li>
 				<div class="mui-text-right lang" id="forget_password" data-locale="forget_password"></div>
+				<div class="mui-text-right lang" id="new_user_login" data-locale="new_user_login"></div>
 			</div>
 		</div>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
@@ -114,9 +115,8 @@
 				$.init({
 					statusBarBackground: '#FFFFFF',
 					beforeback: function() {
-						//var list = plus.webview.getWebviewById('pullrefresh_with_tab');
-						var list = plus.webview.currentWebview().opener();
-						mui.fire(list, 'refresh', {
+						var homeWebView = plus.webview.getWebviewById('home.html');
+						mui.fire(homeWebView, 'refresh', {
 							refresh: "canRefresh"
 						});
 						return true;
@@ -161,25 +161,20 @@
 									params[Api.Params.loginType] = LOGIN_TYPE.OAUTH;
 									params[Api.Params.nickName] = auth.userInfo.nickname;
 									//params.[Api.Params.nickName] = name;
-									params[Api.Params.openId] = auth.userInfo.openid;
+									params[Api.Params.openId] = auth.userInfo.unionid;
 									params[Api.Params.headimgUrl] = auth.userInfo.headimgurl;
 									Repository.User.login(params, {
 										ok: function(data) {
 											app.createState(name, function() {
 												plus.storage.setItem('LoginFlag', 'isLogin');
-												setTimeout(function() {
-													waiting.close();
-													mui.back();
-												}, 500);
+												waiting.close();
 											});
-										},
-										ng: function(data) {
-											waiting.close();
-											if(data === "3020") {
+											if(data.email == "") {
 												plus.nativeUI.alert(TextMessage.input_email, function(event) {
+													//mui.back();
 													mui.openWindow({
-														id: "reg",
-														url: "reg.html",
+														id: "emai_summate",
+														url: "emai_summate.html",
 														waiting: {
 															autoShow: false
 														},
@@ -188,14 +183,29 @@
 														}
 													});
 												}, TextMessage.sharetitle, TextMessage.yes);
+											} else {
+												mui.back();
 											}
+										},
+										ng: function(data) {
+											waiting.close();
 										},
 										error: function() {
 											waiting.close();
 										}
 									});
-								}, function(e) {});
+								}, function(e) {
+								});
 							}, function(e) {
+								var description = "";
+								if(Validator.isObj(e)) {
+									for(var i in e) {
+										var property = e[i];
+										description += i + " = " + property + "\n";
+									}
+								}
+								var alertInfo = Validator.isObj(e) ? description : e;
+								alert(alertInfo);
 								waiting.close();
 							});
 						});
@@ -211,6 +221,12 @@
 					var loginBtn = doc.getElementById('login');
 					loginBtn.addEventListener('tap', function(event) {
 						console.log("click login btn");
+						var email = doc.getElementById('email').value.trim();
+						var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+						if (email == "" || !reg.test(email)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {};
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
@@ -262,6 +278,14 @@
 							waiting: {
 								autoShow: false
 							}
+						});
+					});
+
+					var newUserLogin = doc.getElementById('new_user_login');
+					newUserLogin.addEventListener('tap', function(event) {
+						$.openWindow({
+							id: 'reg',
+							url: "/pages/login/reg.html"
 						});
 					});
 				});
