--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/logisticslist.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/logisticslist.html
@@ -22,13 +22,10 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-icon-back mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
-				<font size="4" id="goback">
-					<font size="4">
-			</a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"><font size="3" class="lang" data-locale="back"></font></a>
 			<h1 class="mui-title lang" data-locale="logistic"></h1>
 		</header>
-		<div class="mui-content" style="margin-top: 2.1em;">
+		<div class="mui-content">
 			<!--send message to delivery-->
 			<div id="dialog" class="call-dialog-div">
 				<div id="deliveryMsgDiv" class="call-dialog-msg-div">
@@ -69,7 +66,6 @@
 	<script>
 		var timer;
 		mui.init();
-
 		function showDialog(msg, tel, l_com_id) {
 			var dialog = document.getElementById('dialog');
 			var deliveryMsgDialog = document.getElementById('deliveryMsgDiv');
@@ -80,8 +76,8 @@
 			// create content into innerHTML
 			content += "<font color=\"white\">";
 			content += msg;
-			content += "<br>";
-			content += tel;
+			//content += "<br>";
+			//content += tel;
 			content += TextMessage.sendtextrequest + "？</font>";
 			content += "<input type='hidden' id='l_com_idval' value='" + l_com_id + "' />";
 			deliveryMsgDialog.innerHTML = content;
@@ -141,22 +137,27 @@
 					var params = {
 						"l_com_id": loid
 					};
-					Repository.Commodity.logisticssendmail(params, {
-						ok: function(data) {
-							Log.d("success");
-							console.log("send mail success!");
-						},
-						ng: function(data) {
-							Log.d(data);
-							if(data == "1000") {
-								alert(TextMessage.test);
-								mui.openWindow({
-									id: 'login',
-									url: '../login/login.html'
-								});
+					if (!Repository.User.isEmptyEmail()) {
+						 //alert("没有登录");
+						 return;
+					} else {
+						Repository.Commodity.logisticssendmail(params, {
+							ok: function(data) {
+								Log.d("success");
+								console.log("send mail success!");
+							},
+							ng: function(data) {
+								console.log(data);
+								if(data == "1000") {
+									alert(TextMessage.test);
+									mui.openWindow({
+										id: 'login',
+										url: '../login/login.html'
+									});
+								}
 							}
-						}
-					});
+						});
+					}
 				}
 
 				// show dialog OK
@@ -166,8 +167,8 @@
 				content += "<font size=\"2\" color=\"white\">";
 				content += TextMessage.sedsuccseetext;
 				content += "<br>";
-				content += msg + "<br>";
-				content += tel + TextMessage.mailsucetext + "<br>";
+				content += msg;
+				content += TextMessage.mailsucetext + "<br>";
 				content += TextMessage.requestmailtext + "<br><br></font>";
 				content += "<a onclick=\"gook();\">";
 				content += "<font color=\"white\">OK</font>";
@@ -211,10 +212,14 @@
 					.appendFormat('<div class="delivery-detail-call" onclick="showDialog(' + "'{0}'" + ",'{1}'" + ",'{2}'" + ');">', l_com_name, l_com_phone, l_com_id)
 					.append('<font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.sendmailbutext + '</font></div></li>')
 					.appendFormat('<li class="delivery-grid2"><div class="delivery-detail-call2" onclick="showCallDialog(' + "'{0}'" + ",'{1}'" + ',null);"><font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.calbutext + '</font></div></li>', l_com_name, l_com_phone)
-					.append('<li class="delivery-grid3"><div class="delivery-detail-call3"><font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.homebutext + '</font></div></li></ul>');
+					.append('<li class="delivery-grid3 homepage"><div class="delivery-detail-call3"><font size="2" color="#FFFFFF" vertical-align="middle">' + TextMessage.homebutext + '</font></div></li></ul>');
 				$(".tran-body").append(html.toString());
 				$("#goback").html(TextMessage.back);
 			}
+			mui(".homepage").on("tap","div",function(){
+				var mainpage=plus.webview.getLaunchWebview();
+					mui.fire(mainpage,'gohome');
+			});
 		}
 		mui.plusReady(function() {
 			var params = {};
@@ -224,7 +229,7 @@
 					showlogisticslist(data);
 				},
 				ng: function(data) {
-					Log.d(data);
+					console.log(data);
 					if(data == "1000") {
 						alert(TextMessage.test);
 						mui.openWindow({
