--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/request.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/request.html
@@ -25,10 +25,10 @@
 		</style>
 
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
 			<h1 class="mui-title lang" data-locale="requesttitle"></h1>
 			<div id="history">
-				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;">交易履历</span></a>
+				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;" class="lang" data-locale="thistorytext"></span></a>
 			</div>
 		</header>
 		<div class="mui-content">
@@ -44,7 +44,7 @@
 					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 						<div id="scroll1" class="mui-scroll-wrapper">
 							<div class="mui-scrolls">
-								<ul class="mui-table-view mui-grid-view want-sell">
+								<ul class="mui-table-view mui-grid-view want-sell" style="padding-top:10px;">
 								</ul>
 							</div>
 						</div>
@@ -68,15 +68,13 @@
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
 		<script>
-			mui.init(/*{
-				swipeBack: false,
-				preloadPages: [{
-						id:"translatelist",
-						url:"../../transaction/transaction2.html"
-				}]
-			}*/);
+			mui.init();
+			var imgwidth=parseInt($(window).width())/3-17;
+			var transpro="";
+			var otranspro="";
 			function showcommodity(results){
 				var data=results.data;
+				var myid=results.myid;
 				//requested
 				var htmlnull='<div style="text-align: center;"><p>'+TextMessage.datanull+'</p></div>';
 				var others=data.own;
@@ -85,8 +83,15 @@
 				}
 				for(var ot=0;ot<others.length;ot++){
 					var transid=others[ot].trans.trans_id;
-					var comm_name=others[ot].trans[0].comm_name;
-					var comm_img=others[ot].trans[0].comm_img;
+					var comditylength=others[ot].trans.commodity.length;
+					for(var vi=0;vi<comditylength;vi++){
+						if(others[ot].trans.commodity[vi].comm_user_id==myid){
+							transpro=others[ot].trans.commodity[vi];
+							break;
+						}
+					}
+					var comm_name=HTMLDecode(transpro.comm_name);
+					var comm_img=transpro.comm_img;
 					var trans_type=others[ot].trans.trans_type;
 					if(trans_type=="0"){
 						var trans_typetext=TextMessage.requireing;
@@ -99,15 +104,26 @@
 					var price=others[ot].trans.price;
 					var trans_mode=others[ot].trans.trans_mode;
 					var transprocount=others[ot].trans.trans_comm_nums;
+					var realwidth=transpro.comm_img_width;
+					var realheight=transpro.comm_img_height;
+					var toppx=0;
+					var oribi=realheight/realwidth;
+					var showheight=imgwidth*oribi;
+					var cha1=showheight-100;
+					if(cha1>0){
+						toppx=cha1/2;
+					}else{
+						toppx=0;
+					}
 					var html = new Util.StringBuilder();
-					html.appendFormat('<li class="mui-table-view-cell mui-media mui-col-xs-6 translate"><a id="{0}" href="#">',transid)
-						.appendFormat('<img class="mui-media-object ka_imgoption" src="{0}" style="height: 131px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'">',comm_img=="" ? "../../../images/nopic.jpg":comm_img)
+					html.appendFormat('<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="{0}" href="#">',transid)
+						.appendFormat('<div class="ka_imgoption"><img class="mui-media-object" src="{0}" style="height: auto;width:100%;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',comm_img=="" ? "../../../images/nopic.jpg":comm_img)
 						.appendFormat('<div class="mui-media-body">{0}</div>', comm_name)
 						.appendFormat('</a><div class="{0}">{1}</div>',trans_type==0 ? "kankan_jyz":"kankan_jycl",trans_typetext)
-						.appendFormat('<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;display:{0}"></div>',transprocount>1 ?"":"none")
-						.appendFormat('<div class="mui-pull-right kankan_jyimgbox"><img src="{0}" style="border-radius: 50%; width: 20px; height: 20px;">',my_photo=="" ? "../../../images/userPhoto.png": my_photo)
+						.appendFormat('<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;display:{0};"></div>',transprocount>1 ?"":"none")
+						.appendFormat('<div class="mui-pull-left kankan_jyimgbox"><img src="{0}" style="border-radius: 50%; width: 20px; height: 20px;">',my_photo=="" ? "../../../images/userPhoto.png": my_photo)
 						.appendFormat('<img src="../../../images/jiantou.png" class="kankan_jhjiantou"><img src="{0}" style="border-radius: 50%; width: 20px; height: 20px;"></div>', other_photo=="" ?"../../../images/userPhoto.png":other_photo)
-						.appendFormat('<div class="mui-pull-left ka_mony"><div>{0}<font color="#000000"> P</font></div></div></li>',price);
+						//.appendFormat('<div class="mui-pull-left ka_mony"><div>{0}<font color="#000000"> P</font></div></div></li>',price);
 					$(".want-sell").append(html.toString());
 				}
 				/////////////////////////Swipe left and right////////////////////////////////
@@ -117,12 +133,19 @@
 					});
 					//request
 					var own=data.other;
-					var html2='<ul class="mui-table-view mui-grid-view want-sell">';
+					var html2='<ul class="mui-table-view mui-grid-view want-sell" style="padding-top:10px;">';
 					for(var ow=0;ow<own.length;ow++){
 						var otransid=own[ow].trans.trans_id;
-						var ocomm_name=own[ow].trans[0].comm_name;
-						var ocomm_img=own[ow].trans[0].comm_img;
-						if(own[ow].trans[0].comm_img==""){
+						var ocomditylength=own[ow].trans.commodity.length;
+						for(var wi=0;wi<ocomditylength;wi++){
+							if(own[ow].trans.commodity[wi].comm_user_id!=myid){
+								var otranspro=own[ow].trans.commodity[wi];
+								break;
+							}
+						}
+						var ocomm_name=otranspro.comm_name;
+						var ocomm_img=otranspro.comm_img;
+						if(otranspro.comm_img==""){
 							var ocomm_img="../../../images/nopic.jpg";
 						}
 						var otrans_type=own[ow].trans.trans_type;
@@ -143,8 +166,17 @@
 						var oprice=own[ow].trans.price;
 						var otrans_mode=own[ow].trans.trans_mode;
 						var otransprocount=own[ow].trans.trans_comm_nums;
-						html2 += '<li class="mui-table-view-cell mui-media mui-col-xs-6 translate"><a id="'+otransid+'" href="#">';
-						html2 += '<img class="mui-media-object ka_imgoption" src="'+ocomm_img+'" style="height: 131px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
+						var orealwidth=otranspro.comm_img_width;
+						var orealheight=otranspro.comm_img_height;
+						var otoppx=0;
+						var ooribi=orealheight/orealwidth;
+						var oshowheight=imgwidth*ooribi;
+						var cha2=oshowheight-100;
+						if(cha2>0){
+							otoppx=cha2/2;
+						}
+						html2 += '<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="'+otransid+'" href="#">';
+						html2 += '<div class="ka_imgoption"><img class="mui-media-object" src="'+ocomm_img+'" style="height: auto;width:100%;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 						html2 += '<div class="mui-media-body">'+ocomm_name+'</div>';
 						html2 += '</a><div class="';
 						if(otrans_type=="0"){
@@ -156,9 +188,9 @@
 						if(otransprocount>1){
 							html2 += '<div class="kankan_morecoin"><img src="../../../images/morebut.png" style="width: 25px; height: 25px;"></div>';
 						}
-						html2 += '<div class="mui-pull-right kankan_jyimgbox"><img src="'+omy_photo+'" style="border-radius: 50%; width: 20px; height: 20px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
+						html2 += '<div class="mui-pull-left kankan_jyimgbox"><img src="'+omy_photo+'" style="border-radius: 50%; width: 20px; height: 20px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
 						html2 += '<img src="../../../images/jiantou.png" class="kankan_jhjiantou"><img src="'+oother_photo+'" style="border-radius: 50%; width: 20px; height: 20px;"></div>';
-						html2 += '<div class="mui-pull-left ka_mony"><div>'+oprice+'<font color="#000000"> P</font></div></div></li>';
+						//html2 += '<div class="mui-pull-left ka_mony"><div>'+oprice+'<font color="#000000"> P</font></div></div></li>';
 					}
 					html2 += '</ul>';
 					if(own==""){
@@ -207,11 +239,12 @@
 						showcommodity(data);
 					},
 					ng: function(data) {
-						console.log("error");
-						Log.d(data);
+						console.log(data);
 						if(data=="1000"|| data=="2002"){
 							$(".jiaoyihitext").hide();
 						}
+						Api.callback_ng(data);
+						
 					}
 				});
 			});
