--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/requestlist.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/requestlist.html
@@ -41,20 +41,25 @@
 					var trans_id=trans.trans_id;
 					var trstatus=trans.status;
 					if(trstatus=="3"){
-						var status="交易成功";
+						var status="取引が成功する";
+						var status = TextMessage.transSuccess;
+					}else if(trstatus=="8"){
+						//var status="中止を請求する";
+						var status = TextMessage.requestStop;
 					}else{
-						var status="交易中止";
+						//var status="取引の中止";
+						var status = TextMessage.transStop;
 					}
 					if(trans[0].comm_img==""){
 						var comm_img ="../../../images/nopic.jpg";
 					}else{
 						var comm_img=trans[0].comm_img;
 					}
-					var comm_name=trans[0].comm_name;
+					var comm_name=HTMLDecode(trans[0].comm_name);
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-table-view-cell transli"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left"><img src="{1}" style="width: 60px;max-height: 60px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',trans_id,comm_img)
-						.appendFormat('<div class="mui-pull-left requestbox"><span>{0}</span><div><font color="#0062CC">{1}</font> P</div></div>',comm_name,price)
-						.appendFormat('<div class="mui-pull-right {0}">{1}</div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
+						.appendFormat('<div class="mui-pull-left requestbox"><span>{0}</span><div><font color="#0062CC" style="display:none;">{1}P</font></div></div>',comm_name,price)
+						.appendFormat('<div class="mui-pull-right ka_userbox {0}">{1}</div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
 					$("#historyshow").append(html.toString());
 					var translatepage=null;
 					mui('.transli').on('tap','a',function(e) {
