--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/search.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/search.html
@@ -20,8 +20,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<a class="lang" data-locale="back"></a>
-			<input id="search"></input>
+			<input id="search" type="text" class="mui-input-clear" />
 			<a class="mui-icon mui-icon-search mui-pull-right"></a>
 		</header>
 	</body>
@@ -32,16 +31,19 @@
 	<script type="text/javascript">
 		(function(mui, doc) {
 			var keyword = "";
+			var wid = "";
 			mui.init({
 				beforeback: function() {
-					var list = plus.webview.getWebviewById('pullrefresh_with_tab');
-					mui.fire(list, 'search', {
+					var page = plus.webview.getWebviewById("pullrefresh_sub_" + wid + ".html");
+					mui.fire(page, 'search', {
 						keyword: keyword
 					});
 					return true;
 				}
 			});
-			$(doc).ready(function() {
+			mui.plusReady(function() {
+				wid = plus.webview.currentWebview().wid;
+				console.log("wid is " + wid);
 				$('.mui-icon-search').click(function() {
 					keyword = $('#search').val().trim();
 					Log.i("keyword is " + keyword);
