--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/setting.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/setting/setting.html
@@ -49,12 +49,12 @@
 				    </ul>
 				    <h5 style="padding-left: 10px;" class="lang" data-locale="setting"></h4>-->
 					<ul class="mui-table-view">
-				        <li class="mui-table-view-cell tickbuy">
+				        <!--<li class="mui-table-view-cell tickbuy">
 				            <a class="mui-navigate-right lang" data-locale="ticketbuy"></a>
 				        </li>
 				        <li class="mui-table-view-cell pointmony">
 				            <a class="mui-navigate-right lang" data-locale="">point提现</a>
-				        </li>
+				        </li>-->
 				         <li class="mui-table-view-cell">
 				            <a class="mui-navigate-right lang" data-locale="userule" href="#Utilization"></a>
 				        </li>
@@ -64,11 +64,11 @@
 				        <li class="mui-table-view-cell">
 				            <a class="mui-navigate-right lang" href="#forbidon" data-locale="forbidontext"></a>
 				        </li>
-				        <li class="mui-table-view-cell">
+				        <li class="mui-table-view-cell" style="display: none;">
 				            <a class="mui-navigate-right lang" href="#moneyCalculat" data-locale="moneycla"></a>
 				        </li>
 				        <li class="mui-table-view-cell">
-				            <a class="mui-navigate-right lang" href="#commerciallaw" data-locale="speciallow"></a>
+				            <a class="mui-navigate-right lang" href="specialbus.html" data-locale="speciallow"></a>
 				        </li>
 				        <li class="mui-table-view-cell Contact">
 				            <a class="mui-navigate-right lang" data-locale="inquiry"></a>
@@ -81,7 +81,7 @@
 				        </li>
 				        <li class="mui-table-view-cell">
 				         <div class="mui-pull-left lang" data-locale="version"></div> 
-				         <div class="mui-pull-right">1.0.0</div>
+				         <div class="mui-pull-right">0.0.4</div>
 				        </li>
 				    </ul>
 				</div>
@@ -91,7 +91,7 @@
 		<div id="Utilization" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
 				<h1 class="mui-center mui-title lang" data-locale="userule">利用规约</h1>
 			</div>
@@ -118,7 +118,7 @@
 		<div id="Privacy" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
 				<h1 class="mui-center mui-title lang" data-locale="privacytext"></h1>
 			</div>
@@ -145,7 +145,7 @@
 		<div id="forbidon" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
 				<h1 class="mui-center mui-title lang" data-locale="forbidontext">禁止物・禁止行為</h1>
 			</div>
@@ -172,7 +172,7 @@
 		<div id="Summary" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
 				<h1 class="mui-center mui-title lang" data-locale="overview"></h1>
 			</div>
@@ -182,10 +182,10 @@
 						<ul class="mui-table-view">
 						        <li class="mui-table-view-cell">
 						      		<p id="Summary_zhtext">
-									    ■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 望月　敏行<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support(at)sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。
+									    ■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 望月　敏行<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support@sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。
 									</p>
 									<p id="Summary_jptext">
-									    ■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 望月　敏行<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support(at)sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。
+									    ■ 事業者<br/>&nbsp; 株式会社サンシーア<br/>■ 代表者<br/>&nbsp; 望月　敏行<br/>■ ホームページ<br/>&nbsp; https://sunseer.co.jp<br/>■ メールアドレス<br/>&nbsp; support@sunseer.co.jp<br/>■ 所在地<br/>&nbsp; 〒110-0015<br/>&nbsp; 東京都台東区東上野6丁目2番1号<br/>&nbsp; MPR東上野ビル6F<br/>■ 電話番号<br/>&nbsp; （03-6280-7380）<br/>&nbsp; ※お取引やサービスについてのお問い合わせは電話では受け付けておりません
 									</p>
 						        </li>
 						    </ul>
@@ -197,7 +197,7 @@
 		<div id="commerciallaw" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
 				<h1 class="mui-center mui-title lang" data-locale="speciallow"></h1>
 			</div>
@@ -207,10 +207,10 @@
 						<ul class="mui-table-view">
 						        <li class="mui-table-view-cell">
 								    <p id="commerciallaw_zhtext">
-									    ＊特定商业交易相关标记<br/>■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 吕亚强<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support(at)sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。<br/><br/>■交易价格<br/>&nbsp; 以各商品标记的价格为准。<br/>■商品等的交接时间<br/>&nbsp; 在交换，购入完了之后，以最快的速度进行交接。<br/>■支付方式<br/>&nbsp; 按照各交易平台规定的方式进行支付<br/>■除商品价款之外所需支付的费用<br/>&nbsp; 通信时候所产生的网络费用<br/>&nbsp; 各支付方式所产生的手续费<br/>■退换货<br/>&nbsp; 不受理顾客个人原因引起的退换货。如有瑕疵品，请和卖家联系。<br/><br/>
+									    ＊特定商业交易相关标记<br/>■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 吕亚强<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support@sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。<br/><br/>■交易价格<br/>&nbsp; 以各商品标记的价格为准。<br/>■商品等的交接时间<br/>&nbsp; 在交换，购入完了之后，以最快的速度进行交接。<br/>■支付方式<br/>&nbsp; 按照各交易平台规定的方式进行支付<br/>■除商品价款之外所需支付的费用<br/>&nbsp; 通信时候所产生的网络费用<br/>&nbsp; 各支付方式所产生的手续费<br/>■退换货<br/>&nbsp; 不受理顾客个人原因引起的退换货。如有瑕疵品，请和卖家联系。<br/><br/>
 									</p>
 									<p id="commerciallaw_jptext">
-									    ＊特定商取引に関する表記<br/>■ 事業者<br/>&nbsp; 株式会社サンシーア<br/>■ 代表者<br/>&nbsp; 望月　敏行<br/>■ ホームページ<br/>&nbsp; https://sunseer.co.jp<br/>■ メールアドレス<br/>&nbsp; support(at)sunseer.co.jp<br/>■ 所在地<br/>&nbsp; 〒110-0015<br/>&nbsp; 東京都台東区東上野6丁目2番1号<br/>&nbsp; MPR東上野ビル6F<br/>■ 電話番号<br/>&nbsp; （03-6280-7380）<br/>&nbsp; ※お取引やサービスについてのお問い合わせは電話では受け付けておりません<br/>&nbsp; 大変申し訳ありませんが、お問い合わせについては個人情報保護などのためアプリ内の「お問い合わせ」フォームよりご連絡をいただき対応させていただいております。<br/>&nbsp; ご不便をおかけいたしますが、ご理解ご協力をよろしくお願いいたします。<br/>■ 販売価格<br/>&nbsp; 各商品に表記された価格に準じます<br/>■ 商品等の引き渡し時期<br/>&nbsp; 交換・購入完了後、速やかにお引き渡しいたします<br/>■ お支払方法<br/>&nbsp; 各プラットフォームが定めるお支払い方法に基づきます<br/>■ 商品代金以外に必要な費用<br/>&nbsp; 通信時に発生するパケット通信料<br/>&nbsp; 支払い方法により所定の手数料<br/>■ 返品・交換について<br/>&nbsp; お客様都合による返品・交換は受け付けておりません<br/>&nbsp; 不良品については販売者への連絡対応を行ってください<br/><br/>
+									    ＊特定商取引に関する表記<br/>■ 事業者<br/>&nbsp; 株式会社サンシーア<br/>■ 代表者<br/>&nbsp; 望月　敏行<br/>■ ホームページ<br/>&nbsp; https://sunseer.co.jp<br/>■ メールアドレス<br/>&nbsp; support@sunseer.co.jp<br/>■ 所在地<br/>&nbsp; 〒110-0015<br/>&nbsp; 東京都台東区東上野6丁目2番1号<br/>&nbsp; MPR東上野ビル6F<br/>■ 電話番号<br/>&nbsp; （03-6280-7380）<br/>&nbsp; ※お取引やサービスについてのお問い合わせは電話では受け付けておりません<br/>&nbsp; 大変申し訳ありませんが、お問い合わせについては個人情報保護などのためアプリ内の「お問い合わせ」フォームよりご連絡をいただき対応させていただいております。<br/>&nbsp; ご不便をおかけいたしますが、ご理解ご協力をよろしくお願いいたします。<br/>■ 販売価格<br/>&nbsp; 各商品に表記された価格に準じます<br/>■ 商品等の引き渡し時期<br/>&nbsp; 交換・購入完了後、速やかにお引き渡しいたします<br/>■ お支払方法<br/>&nbsp; 各プラットフォームが定めるお支払い方法に基づきます<br/>■ 商品代金以外に必要な費用<br/>&nbsp; 通信時に発生するパケット通信料<br/>&nbsp; 支払い方法により所定の手数料<br/>■ 返品・交換について<br/>&nbsp; お客様都合による返品・交換は受け付けておりません<br/>&nbsp; 不良品については販売者への連絡対応を行ってください<br/><br/>
 									</p>
 						        </li>
 						    </ul>
@@ -222,7 +222,7 @@
 		<div id="moneyCalculat" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
 				<h1 class="mui-center mui-title lang" data-locale="moneycla"></h1>
 			</div>
@@ -256,28 +256,28 @@
 		$(function(){
 			var language=navigator.language;
 			console.log("lan"+language);
-			if(language=="zh-CN"){
+			if(language=="zh-CN" || language=="zh-TW" || language=="zh-HK"){
 				$("#rule_jptext").hide();
 				$("#rule_zhtext").show();
 				$("#forbiden_jptext").hide();
 				$("#forbiden_zhtext").show();
 				$("#Privacy_jptext").hide();
 				$("#Privacy_zhtext").show();
-				$("#commerciallaw_zhtext").show();
 				$("#commerciallaw_jptext").hide();
+				$("#commerciallaw_zhtext").show();
 				$("#moneyCalculat_zhtext").show();
 				$("#moneyCalculat_jptext").hide();
 				$("#Summary_jptext").hide();
 				$("#Summary_zhtext").show();
-			}else if(language=="ja-JP" || language=="ja-JP"){
+			}else if(language=="ja-JP" || language=="Ja-JP"){
 				$("#rule_jptext").show();
 				$("#rule_zhtext").hide();
 				$("#forbiden_jptext").show();
 				$("#forbiden_zhtext").hide();
 				$("#Privacy_jptext").show();
 				$("#Privacy_zhtext").hide();
-				$("#commerciallaw_zhtext").hide();
 				$("#commerciallaw_jptext").show();
+				$("#commerciallaw_zhtext").hide();
 				$("#moneyCalculat_zhtext").hide();
 				$("#moneyCalculat_jptext").show();
 				$("#Summary_jptext").show();
@@ -343,21 +343,23 @@
 						var params={};
 						Repository.User.logout(params,{
 							ok: function(data) {
+								plus.storage.setItem('token','');//clear locale token
+								plus.storage.setItem('LoginFlag','');//clear LoginFlag
+								plus.storage.setItem('email','');//clear login user email
+								plus.storage.setItem('myid','');//clear login user Id
+								mui.toast(TextMessage.logoutsuccess, {
+									duration: 'long',
+									type: 'div'
+								});
+								mui.back();
 								console.log("log out success");
 							},
 							ng: function(data) {
-								console.log("error:"+data);
+								console.log("logout error:"+data);
 								Log.d(data);
 							}
 						});
 					});
-					plus.storage.setItem('token','');//clear locale token
-					plus.storage.setItem('LoginFlag', '');//clear LoginFlag
-					mui.toast(TextMessage.logoutsuccess, {
-						duration: 'long',
-						type: 'div'
-					});
-					mui.back();
 //					mui.openWindow({
 //						id: 'login',
 //						url:"../login/login.html"
