--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/transaction/request_item.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/transaction/request_item.html
@@ -44,10 +44,8 @@
 			<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
 					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
 				</button>
-			<h1 class="mui-center mui-title user-title-center maintitle">商品リスト</h1>
-			<span class="mui-right mui-pull-right">
-					<font class="mui-icon goods-list-btn maintitle user-title-center" onclick="select_goods();" style="font-size:15px">確定</font>
-				</span>
+			<h1 class="mui-center mui-title user-title-center maintitle"></h1>
+			
 		</header>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
@@ -86,7 +84,7 @@
 
 			function showRequestItem() {
 				var params = {
-					"transid": trans_id
+					"transid": transid
 				};
 				Repository.Transaction.transEdite(params, {
 					ok: function(data) {
@@ -98,12 +96,7 @@
 						goods_detail(cur_user_id, commdinfo);
 					},
 					ng: function(data) {
-						if(data == "1000") {
-							alert(TextMessage.test);
-						}
-						if(data == "2004") {
-							alert(TextMessage.operation_error);
-						}
+						Api.callback_ng(data);
 					}
 				});
 			}
@@ -122,7 +115,7 @@
 
 				for(var r in request_user_arr) {
 					goods_list += '<li class="mui-table-view-cell mui-media mui-col-xs-4 detail" id="' + request_user_arr[r].commodity_id + '">';
-					goods_list += '<img class="" width="30%"  height="98px;" src="' + request_user_arr[r].img_flg + '">';
+					goods_list += '<img class="" width="30%"  height="98px;" src="' + request_user_arr[r].img_flg + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 					goods_list += '</li>';
 				}
 				$(".goods-list").html(goods_list);
@@ -148,6 +141,35 @@
 					});
 				}, 300);
 			})
+			function select_goods() {
+				var choice = '';
+				$("input[name='commodity_id']:checked").each(function() {
+					choice += $(this).val() + ',';
+				})
+				choice = choice.substr(0, choice.length - 1);
+				//alert(comm_id);
+				var params = {
+					'transid':trans_id,
+					'choice': choice
+				}
+				params.choice = choice;
+				alert(choice  + "====" + choice);
+				Repository.Transaction.transCommdChange(params, {
+					ok: function(data) {
+						var trans_id = data.data.transinfo[0].trans_id;
+							mui.openWindow({
+								url: "./transaction2.html?transid=" + trans_id,
+								id: "transaction",
+								extras: {
+									"transid": trans_id
+								}
+							})
+					},
+					ng: function(data) {
+						Api.callback_ng(data);
+					}
+				});
+			}
 		</script>
 	</body>
 
