--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/transaction/select_item.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/transaction/select_item.html
@@ -2,69 +2,27 @@
 <html>
 
 	<head>
-		<meta charset="utf-8">
-		<title>select item</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" href="../../css/mui.min.css">
-		<link rel="stylesheet" href="../../css/icons-extra.css">
-		<style>
-			html,
-			body {
-				background-color: #efeff4;
-			}
-			
-			.title {
-				margin: 20px 15px 10px;
-				color: #6d6d72;
-				font-size: 15px;
-			}
-			
-			a#user img {
-				width: 35px;
-				height: 35px;
-				border-radius: 50%;
-				margin-top: -0.2em;
-			}
-			
-			header a.mui-icon-extra-notice {
-				margin-top: 0.5em;
-				margin-right: 0.25em;
-			}
-			
-			header a.mui-icon-search {
-				width: 60px;
-			}
-		</style>
+		<meta charset="UTF-8">
+		<title>change item</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="../../css/kankan_home.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
-				</button>
-			<h1 class="mui-center mui-title user-title-center maintitle">商品リスト</h1>
-			<span class="mui-right mui-pull-right">
-					<font class="mui-icon goods-list-btn maintitle user-title-center" onclick="select_goods();" style="font-size:15px">確定</font>
-				</span>
-		</header>
-		<div class="mui-content">
-			<div id="slider" class="mui-slider mui-fullscreen">
-				<div class="mui-slider-group">
-					<div class="mui-slider-item ">
-						<ul class="mui-table-view mui-grid-view goods-list">
-
-						</ul>
-					</div>
-				</div>
-
-				<div class="spinner">
-					<div class="bounce1"></div>
-					<div class="bounce2"></div>
-					<div class="bounce3"></div>
-				</div>
+			<header class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
+			<h1 class="mui-title lang" data-locale="commodity_select"></h1>
+			<div onclick="select_goods();">
+				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;" class="lang" data-locale="register"></span></a>
 			</div>
+		</header>
+		</header>
+		<div class="mui-content" style="padding-top:30px;">
+			<ul class="mui-table-view mui-grid-view goods-list" style="padding-top:10px;">
+
+			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/jquery-3.2.0.min.js"></script>
@@ -80,6 +38,7 @@
 				mode = self.mode;
 				get_goods_list();
 			})
+			var imgwidth = parseInt($(window).width()) / 3 - 17;
 
 			function get_goods_list(params) {
 				var params = {
@@ -95,29 +54,59 @@
 					choice += $(this).val() + ',';
 				})
 				choice = choice.substr(0, choice.length - 1);
-				alert(comm_id);
+				if(choice == '') {
+					alert(TextMessage.commdSelect);
+
+					return false;
+				}
 				var params = {
 					'commodity_id': comm_id,
 					'mode': mode,
 					'choice': choice
 				}
-				params.choice = choice;
+				//alert(params.choice);
 				transRequest(params, 'second');
 			}
 
 			function transRequest(params, flag) {
 				Repository.Transaction.transRequest(params, {
 					ok: function(data) {
+						if(data.data.data == '') {
+							mui.toast(TextMessage.commdNo, {
+								duration: 'long',
+								type: 'div'
+							});
+							return false;
+						};
 						if(flag == 'first') {
 							var comm_info = data.data.data;
 							var goods_list = '';
 							for(var gds in comm_info) {
-								goods_list += '<li class="mui-table-view-cell mui-media mui-col-xs-4 detail" >';
+								var imgWidth = comm_info[gds].width;
+								var imgHeight = comm_info[gds].height;
+								var hwhpercent = imgHeight / imgWidth;
+								var top_marign = 0;
+								var showheight = imgwidth * hwhpercent;
+								var cha1 = showheight - 100;
+								if(cha1 > 0) {
+									top_marign = cha1 / 2;
+								} else {
+									top_marign = 0;
+								}
+								var checkboxstyle = 'position:absolute;top:7px;left:85%;';
+								var imgstyle = 'height: auto;width:100%;margin-top:-' + top_marign + 'px;';
+
+								goods_list += '<li class="mui-table-view-cell mui-media mui-col-xs-4 detail"  style="position:relative;height:160px;">';
+
+								goods_list += '<input id="' + comm_info[gds].commodity_id + '" style="' + checkboxstyle + '" name="commodity_id" value="' + comm_info[gds].commodity_id + '" type="checkbox" >';
 								goods_list += '<label  for="' + comm_info[gds].commodity_id + '">';
-								goods_list += '<img class="" width="30%"  height="98px;" src="' + comm_info[gds].img_flg + '">';
-								goods_list += '<input  style="float:right;position: fixed;margin-left:-13px;" name="commodity_id" value="' + comm_info[gds].commodity_id + '" type="checkbox" >';
+								goods_list += '<div style="line-height:160px;vertical-align: middle;">';
+								goods_list += '<img class="mui-media-object" style="' + imgstyle + '" src="' + comm_info[gds].img_flg + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
+
+								goods_list += '</div>';
 								goods_list += '</label>';
 								goods_list += '</li>';
+
 							}
 							$(".goods-list").html(goods_list);
 						} else {
@@ -132,18 +121,7 @@
 						}
 					},
 					ng: function(data) {
-						if(data == "1000") {
-							mui.toast(TextMessage.test, {
-								duration: 'long',
-								type: 'div'
-							});
-						}
-						if(data == "2004") {
-							mui.toast(TextMessage.operation_error, {
-								duration: 'long',
-								type: 'div'
-							});
-						}
+						Api.callback_ng(data);
 					}
 				});
 			}
