--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/setting/setting.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/setting/setting.html
@@ -81,7 +81,7 @@
 				        </li>
 				        <li class="mui-table-view-cell">
 				         <div class="mui-pull-left lang" data-locale="version"></div> 
-				         <div class="mui-pull-right">0.0.2</div>
+				         <div class="mui-pull-right">0.0.4</div>
 				        </li>
 				    </ul>
 				</div>
@@ -185,7 +185,7 @@
 									    ■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 望月　敏行<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support@sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。
 									</p>
 									<p id="Summary_jptext">
-									    ■名&nbsp;&nbsp;&nbsp; 称<br/>&nbsp; 株式会社サンシーア<br/>■法人代表<br/>&nbsp; 望月　敏行<br/>■网址<br/>&nbsp; https://sunseer.co.jp<br/>■邮箱<br/>&nbsp; support@sunseer.co.jp<br/>■地址<br/>&nbsp; 〒110-0015　東京都台東区東上野6丁目2番1号 MPR東上野ビル６F<br/>■电话号码<br/>&nbsp; 03-6280-7380<br/><br/>※为了保护个人信息安全，交易和服务的相关咨询请在APP上的“咨询”页面进行，<br/>不受理电话咨询。给各位带来不便，敬请原谅。多谢配合。
+									    ■ 事業者<br/>&nbsp; 株式会社サンシーア<br/>■ 代表者<br/>&nbsp; 望月　敏行<br/>■ ホームページ<br/>&nbsp; https://sunseer.co.jp<br/>■ メールアドレス<br/>&nbsp; support@sunseer.co.jp<br/>■ 所在地<br/>&nbsp; 〒110-0015<br/>&nbsp; 東京都台東区東上野6丁目2番1号<br/>&nbsp; MPR東上野ビル6F<br/>■ 電話番号<br/>&nbsp; （03-6280-7380）<br/>&nbsp; ※お取引やサービスについてのお問い合わせは電話では受け付けておりません
 									</p>
 						        </li>
 						    </ul>
