--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/requestlist.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/requestlist.html
@@ -68,8 +68,8 @@
 						plus.webview.close(preView);
 						mui.openWindow({
 							//id: 'transaction'
-							url: "../../transaction/transevaluate.html?transid=" + trans_id,
-						id: "transevaluate",
+							url: "../../transaction/transaction2.html?transid=" + trans_id,
+						id: "transaction",
 						extras: {
 							"transid": tid
 						}
